{
  "app_title": "Flutter Kiến Trúc Sạch với Quản Lý Trạng Thái BloC",
  "login": "Đăng nhập",
  "register": "Đăng ký",
  "add_product": "Thêm sản phẩm",
  "edit_product": "Sửa sản phẩm",
  "input_product_name": "Nhập tên sản phẩm",
  "input_product_price": "Nhập giá sản phẩm",
  "exit_message": "Bạn có chắc chắn muốn thoát không?",
  "delete_product_message": "Bạn có chắc chắn muốn xoá sản phẩm này không?",
  "button_yes": "Có",
  "button_cancel": "Huỷ",
  "greeting": "Chào {}!",
  "input_email": "Email",
  "input_username": "Tên người dùng",
  "input_password": "Mật khẩu",
  "input_confirm_password": "Xác nhận mật khẩu",
  "no_internet": "Không có kết nối mạng",
  "has_internet": "Đã kết nối mạng",
  "cheap": "Rẻ",
  "medium": "Trung bình",
  "expensive": "Đắt",
  "validation_product": "{} tối thiểu 4 ký tự",
  "product_name": "Tên sản phẩm",
  "product_price": "Giá sản phẩm"
}
