...
                        'Hãy để ý xem Radar có bị giật/đứng hình không...';
                  }

                  return Column(
                    children: [
                      Text(
                        'Tổng items: $count',
                        style: const TextStyle(
                          fontSize: 18,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                      const SizedBox(height: 16),
...
                        onPressed: isLoading
                            ? null
                            : () => context.read<IsolateBloc>().add(
                                const FetchPayloadEvent(useIsolate: true),
                              ),
                        icon: const Icon(Icons.speed, color: Colors.white),
                        label: const Text('API Parse (CÓ Isolate)'),
                        style: ElevatedButton.styleFrom(
                          backgroundColor: Colors.green,
                          foregroundColor: Colors.white,
                          padding: const EdgeInsets.symmetric(vertical: 12),
                          minimumSize: const Size(double.infinity, 50),
                        ),
...
